[tool.poetry]
name = "kombu-rabbitmq"
version = "0.1.0"
description = "RabbitMQ consumer implementation using kombu. Without celery"
authors = ["Thulasi Ram <thulasi503@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kombu = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
